--- a/app_frontend/jade/index.jade
+++ b/app_frontend/jade/index.jade
@@ -1,21 +1,18 @@
 doctype html
 html(lang="en")
-  include includes/header
-  body
-    script(type='text/javascript').
-      youAreUsingJade = true
-      console.debug(youAreUsingJade)
-      console.debug('ssss1')
-    h1 Jade - node template engine
-    #container.col
-      if youAreUsingJade
-        p You are amazing
-      else
-        p Get on it!
-      p.
-        Jade is a terse and simple
-        templating language with a
-        strong focus on performance
-        and powerful features.
+    include includes/header
+    body
+        script(type='text/javascript').
+            youAreUsingJade = true
+            console.debug(youAreUsingJade)
+            console.debug('ssss1')
+        h1 Jade - node template engine
+        #container.col
+        canvas#canvas(height='320' width='480').
+            obnovite brouzer
+        script(type='text/javascript').
+            var example = document.getElementById("canvas"),
+            ctx     = example.getContext('2d');
+            ctx.fillRect(0, 0, example.width, example.height);
 
 
