--- a/app_frontend/less/main.less
+++ b/app_frontend/less/main.less
@@ -10,7 +10,48 @@
 /* ******************************** GLOBAL ********************************* */
 
 /* ******************************** MAIN PAGE ********************************* */
+#header, #footer {
+  width: 960px;
+  margin: 0 auto;
+  padding: 20px 0;
+}
+#container {
+  width: 960px;
+  margin: 0 auto;
+  padding: 60px 0;
 
+  h1 {
+    //text-align: center;
+  }
+}
+.canvas-container {
+  position: relative;
+  width: 800px;
+  height: 600px;
+  margin: 50px auto;
+}
+.canvas-elem {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+
+  #canvas-layer1{
+
+  }
+}
+#canvas-controls {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
 /* ******************************** Product PAGE ********************************* */
 
 
